--- a/index.html
+++ b/index.html
@@ -13,20 +13,211 @@
     <h3 id="timer">Timer goes here</h3>
     <h3 id="wrong-guess">Wrong Guess Count goes here</h3>
     
-    <div>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-        <button class="game-button"></button>
-    </div>
-    <div>
-        <button id="play-again" class="hidden">Play Again</button>
-    </div>
+    <div class="board">
+
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-binoculars.jpg" 
+            alt="Monkey using binoculars">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-ballon.jpg" 
+            alt="Monkey with red ballon">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-banana.jpg" 
+            alt="Monkey eating a banana">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-baseball-hat.png" 
+            alt="Monkey wearing a baseball hat">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-bike.jpg" 
+            alt="Monkey riding a bicycle">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-cake.png" 
+            alt="Monkey decorating a cake">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-firetruck.jpg" 
+            alt="Monkey on top of a firetruck">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-reading-map.jpg" 
+            alt="Monkey reading a map">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-yellow-hat.jpg" 
+            alt="Monkey wearing a yellow hat">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/man-yellow-hat.jpg" 
+            alt="Monkey with man with a yellow hat">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-binoculars.jpg" 
+            alt="Monkey using binoculars">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-ballon.jpg" 
+            alt="Monkey with red ballon">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-banana.jpg" 
+            alt="Monkey eating a banana">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-baseball-hat.png" 
+            alt="Monkey wearing a baseball hat">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-bike.jpg" 
+            alt="Monkey riding a bicycle">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-cake.png" 
+            alt="Monkey decorating a cake">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-firetruck.jpg" 
+            alt="Monkey on top of a firetruck">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-reading-map.jpg" 
+            alt="Monkey reading a map">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/george-yellow-hat.jpg" 
+            alt="Monkey wearing a yellow hat">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+        <div class="card">
+            <img 
+            class="front"
+            src="img/man-yellow-hat.jpg" 
+            alt="Monkey with man with a yellow hat">
+            <img 
+            class="back"
+            src="img/george-face.png" 
+            alt="Monkey Face">
+        </div>
+    </div>  
+    
+    <button id="play-again" class="hidden">Play Again</button>
+
 </body>
 </html>
