--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
         <title>Memory Game</title>
     </head>
     <body>
-        <h1 id="main-title">Memory Game</h1>
+        <h1 id="main-title">Curious George</h1>
 
         <h2 id="message" class="hidden"></h2>
         
         <section id="nav">
             <div>
-                <div>Wrong Guess: <span id="wrong-guess">0</span>
+                <div>Wrong Guess: <span id="wrong-guess"></span>
                 </div>
             </div>
             <div>
-                <div><span id="timer">00</span></div>
+                <div><span id="timer"></span></div>
             </div>
             <div>
-                <div>Pair Count: <span id ="pair-count">0</span></div>
+                <div>Pair Count: <span id ="pair-count"></span></div>
             </div>
         </section>
         <section id="instructions" class="hidden-after">
             <ul>Instructions:
                 <li>Click Start to begin</li>
                 <li>Select a cards to reveal the picture</li>
-                <li>6 correct matches and you win!</li>
-                <li>5 wrong guesses and you lose!</li>
+                <li>Six correct matches and you win!</li>
+                <li>Five wrong guesses and you lose!</li>
             </ul>
         </section>
         <section class="board"></section>
